[gd_scene load_steps=8 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/11-Door/door.png" type="Texture" id=2]
[ext_resource path="res://Key_alert.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 7, 6 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 9, 9 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.58876, 25.7222 )

[node name="Door" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 5
frame = 9

[node name="ani" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Close = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Open = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.516943, 1.55083 )
shape = SubResource( 4 )

[node name="Key_alert" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
